--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,7 +1,7 @@
-<footer class="[ cluster g2 ] [ px1 pt2 pb0 fs-1 ]">
+<footer class="[ cluster squeeze12 ] [ cx e g2 px1 pt2 pb0 fs-1 ]">
   <div>
     {% for language in site.languages %}
-    {% if loop.first %}<ul class="flow2">{% endif %}
+    {% if loop.first %}<ul class="[ flow2 ]">{% endif %}
 
       {% set translationUrl = "/" + language.code + "/" %}
       {% set activeClass = "is-active" if language.code == locale else "" %}
@@ -10,8 +10,8 @@
       {% if entry.data.translationKey == translationKey and entry.data.locale == language.code and entry.data.locale != locale %}
       {% set translationUrl = entry.url %}
       <li>
-        <a class="[ button {{ activeClass }} ] [ cluster g-3 jfycenter itemscenter ] [ fw700 ]" href="{{ translationUrl }}">
-          <svg class="icon1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" /></svg>
+        <a class="[ button {{ activeClass }} ] [ stack ] [ ic fw700 ]" href="{{ translationUrl }}">
+          <svg class="[ squeeze0 ]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" /></svg>
           <p>{{ language.message }}</p>
         </a>
       </li>
@@ -31,7 +31,7 @@
     {% else %}
     <p>¿Quieres ponerte en contacto? Escríbeme a <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
     <p>Recopilo estadísticas <em>no identificables personalmente</em> mediante un servicio de analítica web que no usa cookies. <a href="https://videos.usefathom.com/how-fathom-works.mp4" target="_blank">Ver un breve vídeo</a> en inglés para obtener más información.</p>
-    <p><strong>Este sitio web tiene sólo fines educativos. No estoy proporcionando aconsejo médico personalizado ni asumo ninguna responsabilidad por lo que hagas con la información presentada.</strong></p>
+    <p><strong>Este sitio web tiene sólo fines educativos. No estoy proporcionando aconsejo médico personalizado ni asumo responsabilidad por lo que hagas con la información presentada.</strong></p>
 
     {% endif %}
 
