--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,4 +1,4 @@
-<header class="[ nav-header ] [ cluster g-2 jfybetween itemscenter ]">
+<header class="[ nav-header ] [ cluster squeeze12 ] [ cx e g-2 ]">
   <nav>
     <a class="[ logo ] [ fs2 ]" href="/{{ locale }}/">BEVAE</a>
   </nav>
