--- a/src/assets/scss/composition/_grid.scss
+++ b/src/assets/scss/composition/_grid.scss
@@ -1,4 +1,5 @@
-.grid0,
+// Dynamically squeezes children into equal fractions
+
 .grid1,
 .grid2,
 .grid3,
@@ -10,12 +11,11 @@
 .grid9,
 .grid10,
 .grid11,
-.grid12, {
+.grid12,
+.grid13 {
   display: grid;
 }
 
-
-.grid0  { grid-template-columns: repeat(auto-fit, minmax(var(--space0 ), 1fr)); }
 .grid1  { grid-template-columns: repeat(auto-fit, minmax(var(--space1 ), 1fr)); }
 .grid2  { grid-template-columns: repeat(auto-fit, minmax(var(--space2 ), 1fr)); }
 .grid3  { grid-template-columns: repeat(auto-fit, minmax(var(--space3 ), 1fr)); }
@@ -28,3 +28,4 @@
 .grid10 { grid-template-columns: repeat(auto-fit, minmax(var(--space10), 1fr)); }
 .grid11 { grid-template-columns: repeat(auto-fit, minmax(var(--space11), 1fr)); }
 .grid12 { grid-template-columns: repeat(auto-fit, minmax(var(--space12), 1fr)); }
+.grid13 { grid-template-columns: repeat(auto-fit, minmax(var(--space13), 1fr)); }
