--- a/src/assets/scss/composition/_icon.scss
+++ b/src/assets/scss/composition/_icon.scss
@@ -1,9 +1,10 @@
-/* The parent or ancestor element for the icon */
+// Make sure inline SVG icons align correctly with text
+
+// For icons with accompanying text (put the class on the parent)
 .icon {
   display: inline-flex;
   align-items: baseline;
 
-  /* General icons */
   svg {
     height: .75em;
     height: 1cap;
@@ -11,28 +12,9 @@
     width: 1cap;
   }
 
-  &[data-state="lowercase"] > svg {
+  // Lines up better with lowercase-only text
+  &[data-icon="lowercase"] svg {
     width: 1ex;
     height: 1ex;
   }
 }
-
-
-
-/* For standalone icons */
-.icon-2 { height: var(--step-2); width: var(--step-2); }
-.icon-1 { height: var(--step-1); width: var(--step-1); }
-.icon0  { height: var(--step0 ); width: var(--step0 ); }
-.icon1  { height: var(--step1 ); width: var(--step1 ); }
-.icon2  { height: var(--step2 ); width: var(--step2 ); }
-.icon3  { height: var(--step3 ); width: var(--step3 ); }
-.icon4  { height: var(--step4 ); width: var(--step4 ); }
-.icon5  { height: var(--step5 ); width: var(--step5 ); }
-
-
-/*
-<button dir="rtl">
-  <svg class="icon"></svg> Close
-</button>
-*/
-
