--- a/src/assets/scss/composition/_squeeze.scss
+++ b/src/assets/scss/composition/_squeeze.scss
@@ -1,12 +1,23 @@
-.squeeze1  { box-sizing: content-box; max-inline-size: var(--space1 ); }
-.squeeze2  { box-sizing: content-box; max-inline-size: var(--space2 ); }
-.squeeze3  { box-sizing: content-box; max-inline-size: var(--space3 ); }
-.squeeze4  { box-sizing: content-box; max-inline-size: var(--space4 ); }
-.squeeze5  { box-sizing: content-box; max-inline-size: var(--space5 ); }
-.squeeze6  { box-sizing: content-box; max-inline-size: var(--space6 ); }
-.squeeze7  { box-sizing: content-box; max-inline-size: var(--space7 ); }
-.squeeze8  { box-sizing: content-box; max-inline-size: var(--space8 ); }
-.squeeze9  { box-sizing: content-box; max-inline-size: var(--space9 ); }
-.squeeze10 { box-sizing: content-box; max-inline-size: var(--space10); }
-.squeeze11 { box-sizing: content-box; max-inline-size: var(--space11); }
-.squeeze12 { box-sizing: content-box; max-inline-size: var(--space12); }
+// Wrapper which constrains horizontal width
+
+.squeeze-3, .sq-3 { box-sizing: content-box; max-inline-size: var(--space-3); }
+.squeeze-2, .sq-2 { box-sizing: content-box; max-inline-size: var(--space-2); }
+.squeeze-1, .sq-1 { box-sizing: content-box; max-inline-size: var(--space-1); }
+.squeeze0,  .sq0  { box-sizing: content-box; max-inline-size: var(--space0 ); }
+.squeeze1,  .sq1  { box-sizing: content-box; max-inline-size: var(--space1 ); }
+.squeeze2,  .sq2  { box-sizing: content-box; max-inline-size: var(--space2 ); }
+.squeeze3,  .sq3  { box-sizing: content-box; max-inline-size: var(--space3 ); }
+.squeeze4,  .sq4  { box-sizing: content-box; max-inline-size: var(--space4 ); }
+.squeeze5,  .sq5  { box-sizing: content-box; max-inline-size: var(--space5 ); }
+.squeeze6,  .sq6  { box-sizing: content-box; max-inline-size: var(--space6 ); }
+.squeeze7,  .sq7  { box-sizing: content-box; max-inline-size: var(--space7 ); }
+.squeeze8,  .sq8  { box-sizing: content-box; max-inline-size: var(--space8 ); }
+.squeeze9,  .sq9  { box-sizing: content-box; max-inline-size: var(--space9 ); }
+.squeeze10, .sq10 { box-sizing: content-box; max-inline-size: var(--space10); }
+.squeeze11, .sq11 { box-sizing: content-box; max-inline-size: var(--space11); }
+.squeeze12, .sq12 { box-sizing: content-box; max-inline-size: var(--space12); }
+.squeeze13, .sq13 { box-sizing: content-box; max-inline-size: var(--space13); }
+
+.squeezenone, .sq-n { box-sizing: content-box; max-inline-size: none;               }
+.squeezebody, .sq-b { box-sizing: content-box; max-inline-size: var(--measurebody); }
+.squeezehead, .sq-h { box-sizing: content-box; max-inline-size: var(--measurehead); }
