--- a/src/assets/scss/utility/_border.scss
+++ b/src/assets/scss/utility/_border.scss
@@ -1,118 +1,110 @@
-.bd-2 { border: var(--border-2) solid hsl(var(--bdcolor, --primary900)) }
-.bd-1 { border: var(--border-1) solid hsl(var(--bdcolor, --primary900)) }
-.bd0  { border: var(--border0 ) solid hsl(var(--bdcolor, --primary900)) }
-.bd1  { border: var(--border1 ) solid hsl(var(--bdcolor, --primary900)) }
-.bd2  { border: var(--border2 ) solid hsl(var(--bdcolor, --primary900)) }
+// Border thickness, radius, and colors
+
+// All around
+.bd-2 { border: var(--border-2) solid var(--bdcolor, --primary900) }
+.bd-1 { border: var(--border-1) solid var(--bdcolor, --primary900) }
+.bd0  { border: var(--border0 ) solid var(--bdcolor, --primary900) }
+.bd1  { border: var(--border1 ) solid var(--bdcolor, --primary900) }
+.bd2  { border: var(--border2 ) solid var(--bdcolor, --primary900) }
 
 
-/* Border two sides */
-.bdx-2 {
-  border-left:  var(--border-2) solid hsl(var(--bdcolor, --primary900));
-  border-right: var(--border-2) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdx-1 {
-  border-left:  var(--border-1) solid hsl(var(--bdcolor, --primary900));
-  border-right: var(--border-1) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdx0 {
-  border-left:  var(--border0) solid hsl(var(--bdcolor, --primary900));
-  border-right: var(--border0) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdx1 {
-  border-left:  var(--border1) solid hsl(var(--bdcolor, --primary900));
-  border-right: var(--border1) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdx2 {
-  border-left:  var(--border2) solid hsl(var(--bdcolor, --primary900));
-  border-right: var(--border2) solid hsl(var(--bdcolor, --primary900)); 
-}
+// Horizontal
+.bdx-2 { border-inline: var(--border-2) solid var(--bdcolor, --primary900); }
+.bdx-1 { border-inline: var(--border-1) solid var(--bdcolor, --primary900); }
+.bdx0  { border-inline: var(--border0) solid var(--bdcolor, --primary900); }
+.bdx1  { border-inline: var(--border1) solid var(--bdcolor, --primary900); }
+.bdx2  { border-inline: var(--border2) solid var(--bdcolor, --primary900); }
 
-.bdy-2 {
-  border-top:    var(--border-2) solid hsl(var(--bdcolor, --primary900));
-  border-bottom: var(--border-2) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdy-1 {
-  border-top:    var(--border-1) solid hsl(var(--bdcolor, --primary900));
-  border-bottom: var(--border-1) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdy0 {
-  border-top:    var(--border0) solid hsl(var(--bdcolor, --primary900));
-  border-bottom: var(--border0) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdy1 {
-  border-top:    var(--border1) solid hsl(var(--bdcolor, --primary900));
-  border-bottom: var(--border1) solid hsl(var(--bdcolor, --primary900)); 
-}
-.bdy2 {
-  border-top:    var(--border2) solid hsl(var(--bdcolor, --primary900));
-  border-bottom: var(--border2) solid hsl(var(--bdcolor, --primary900)); 
-}
+// Vertical
+.bdy-2 { border-block: var(--border-2) solid var(--bdcolor, --primary900); }
+.bdy-1 { border-block: var(--border-1) solid var(--bdcolor, --primary900); }
+.bdy0  { border-block: var(--border0) solid var(--bdcolor, --primary900); }
+.bdy1  { border-block: var(--border1) solid var(--bdcolor, --primary900); }
+.bdy2  { border-block: var(--border2) solid var(--bdcolor, --primary900); }
 
+// Top
+.bdt-2 { border-top: var(--border-2) solid var(--bdcolor, --primary900) }
+.bdt-1 { border-top: var(--border-1) solid var(--bdcolor, --primary900) }
+.bdt0  { border-top: var(--border0 ) solid var(--bdcolor, --primary900) }
+.bdt1  { border-top: var(--border1 ) solid var(--bdcolor, --primary900) }
+.bdt2  { border-top: var(--border2 ) solid var(--bdcolor, --primary900) }
 
-/* Border one side */
-.bdt-2 { border-top: var(--border-2) solid hsl(var(--bdcolor, --primary900)) }
-.bdt-1 { border-top: var(--border-1) solid hsl(var(--bdcolor, --primary900)) }
-.bdt0  { border-top: var(--border0 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdt1  { border-top: var(--border1 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdt2  { border-top: var(--border2 ) solid hsl(var(--bdcolor, --primary900)) }
+// Right
+.bdr-2 { border-right: var(--border-2) solid var(--bdcolor, --primary900) }
+.bdr-1 { border-right: var(--border-1) solid var(--bdcolor, --primary900) }
+.bdr0  { border-right: var(--border0 ) solid var(--bdcolor, --primary900) }
+.bdr1  { border-right: var(--border1 ) solid var(--bdcolor, --primary900) }
+.bdr2  { border-right: var(--border2 ) solid var(--bdcolor, --primary900) }
 
-.bdr-2 { border-right: var(--border-2) solid hsl(var(--bdcolor, --primary900)) }
-.bdr-1 { border-right: var(--border-1) solid hsl(var(--bdcolor, --primary900)) }
-.bdr0  { border-right: var(--border0 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdr1  { border-right: var(--border1 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdr2  { border-right: var(--border2 ) solid hsl(var(--bdcolor, --primary900)) }
+// Bottom
+.bdb-2 { border-bottom: var(--border-2) solid var(--bdcolor, --primary900) }
+.bdb-1 { border-bottom: var(--border-1) solid var(--bdcolor, --primary900) }
+.bdb0  { border-bottom: var(--border0 ) solid var(--bdcolor, --primary900) }
+.bdb1  { border-bottom: var(--border1 ) solid var(--bdcolor, --primary900) }
+.bdb2  { border-bottom: var(--border2 ) solid var(--bdcolor, --primary900) }
 
-.bdb-2 { border-bottom: var(--border-2) solid hsl(var(--bdcolor, --primary900)) }
-.bdb-1 { border-bottom: var(--border-1) solid hsl(var(--bdcolor, --primary900)) }
-.bdb0  { border-bottom: var(--border0 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdb1  { border-bottom: var(--border1 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdb2  { border-bottom: var(--border2 ) solid hsl(var(--bdcolor, --primary900)) }
+// Left
+.bdl-2 { border-left: var(--border-2) solid var(--bdcolor, --primary900) }
+.bdl-1 { border-left: var(--border-1) solid var(--bdcolor, --primary900) }
+.bdl0  { border-left: var(--border0 ) solid var(--bdcolor, --primary900) }
+.bdl1  { border-left: var(--border1 ) solid var(--bdcolor, --primary900) }
+.bdl2  { border-left: var(--border2 ) solid var(--bdcolor, --primary900) }
 
-.bdl-2 { border-left: var(--border-2) solid hsl(var(--bdcolor, --primary900)) }
-.bdl-1 { border-left: var(--border-1) solid hsl(var(--bdcolor, --primary900)) }
-.bdl0  { border-left: var(--border0 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdl1  { border-left: var(--border1 ) solid hsl(var(--bdcolor, --primary900)) }
-.bdl2  { border-left: var(--border2 ) solid hsl(var(--bdcolor, --primary900)) }
-
-
-/* Border color */
-.bd-p050 { --bdcolor: var(--primary050); }
-.bd-p100 { --bdcolor: var(--primary100); }
-.bd-p200 { --bdcolor: var(--primary200); }
-.bd-p300 { --bdcolor: var(--primary300); }
-.bd-p400 { --bdcolor: var(--primary400); }
-.bd-p500 { --bdcolor: var(--primary500); }
-.bd-p600 { --bdcolor: var(--primary600); }
-.bd-p700 { --bdcolor: var(--primary700); }
-.bd-p800 { --bdcolor: var(--primary800); }
-.bd-p900 { --bdcolor: var(--primary900); }
-
-.bd-n050 { --bdcolor: var(--neutral050); }
-.bd-n100 { --bdcolor: var(--neutral100); }
-.bd-n200 { --bdcolor: var(--neutral200); }
-.bd-n300 { --bdcolor: var(--neutral300); }
-.bd-n400 { --bdcolor: var(--neutral400); }
-.bd-n500 { --bdcolor: var(--neutral500); }
-.bd-n600 { --bdcolor: var(--neutral600); }
-.bd-n700 { --bdcolor: var(--neutral700); }
-.bd-n800 { --bdcolor: var(--neutral800); }
-.bd-n900 { --bdcolor: var(--neutral900); }
-
-.bd-a050 { --bdcolor: var(--accent050); }
-.bd-a100 { --bdcolor: var(--accent100); }
-.bd-a200 { --bdcolor: var(--accent200); }
-.bd-a300 { --bdcolor: var(--accent300); }
-.bd-a400 { --bdcolor: var(--accent400); }
-.bd-a500 { --bdcolor: var(--accent500); }
-.bd-a600 { --bdcolor: var(--accent600); }
-.bd-a700 { --bdcolor: var(--accent700); }
-.bd-a800 { --bdcolor: var(--accent800); }
-.bd-a900 { --bdcolor: var(--accent900); }
-
-
-/* Border radius */
+// Border radius
 .bdrad-2 { border-radius: var(--radius-2); }
 .bdrad-1 { border-radius: var(--radius-1); }
 .bdrad0  { border-radius: var(--radius0 ); }
 .bdrad1  { border-radius: var(--radius1 ); }
 .bdrad2  { border-radius: var(--radius2 ); }
+
+// Standard colors
+.bd-p100 { --bdcolor: hsl(var(--primary100)); }
+.bd-p200 { --bdcolor: hsl(var(--primary200)); }
+.bd-p300 { --bdcolor: hsl(var(--primary300)); }
+.bd-p400 { --bdcolor: hsl(var(--primary400)); }
+.bd-p500 { --bdcolor: hsl(var(--primary500)); }
+.bd-p600 { --bdcolor: hsl(var(--primary600)); }
+.bd-p700 { --bdcolor: hsl(var(--primary700)); }
+.bd-p800 { --bdcolor: hsl(var(--primary800)); }
+.bd-p900 { --bdcolor: hsl(var(--primary900)); }
+.bd-n100 { --bdcolor: hsl(var(--neutral100)); }
+.bd-n200 { --bdcolor: hsl(var(--neutral200)); }
+.bd-n300 { --bdcolor: hsl(var(--neutral300)); }
+.bd-n400 { --bdcolor: hsl(var(--neutral400)); }
+.bd-n500 { --bdcolor: hsl(var(--neutral500)); }
+.bd-n600 { --bdcolor: hsl(var(--neutral600)); }
+.bd-n700 { --bdcolor: hsl(var(--neutral700)); }
+.bd-n800 { --bdcolor: hsl(var(--neutral800)); }
+.bd-n900 { --bdcolor: hsl(var(--neutral900)); }
+.bd-a100 { --bdcolor: hsl(var(--accent100)); }
+.bd-a200 { --bdcolor: hsl(var(--accent200)); }
+.bd-a300 { --bdcolor: hsl(var(--accent300)); }
+.bd-a400 { --bdcolor: hsl(var(--accent400)); }
+.bd-a500 { --bdcolor: hsl(var(--accent500)); }
+.bd-a600 { --bdcolor: hsl(var(--accent600)); }
+.bd-a700 { --bdcolor: hsl(var(--accent700)); }
+.bd-a800 { --bdcolor: hsl(var(--accent800)); }
+.bd-a900 { --bdcolor: hsl(var(--accent900)); }
+.bd-y100 { --bdcolor: hsl(var(--yellow100)); }
+.bd-y200 { --bdcolor: hsl(var(--yellow200)); }
+.bd-y300 { --bdcolor: hsl(var(--yellow300)); }
+.bd-y400 { --bdcolor: hsl(var(--yellow400)); }
+.bd-y500 { --bdcolor: hsl(var(--yellow500)); }
+.bd-y600 { --bdcolor: hsl(var(--yellow600)); }
+.bd-y700 { --bdcolor: hsl(var(--yellow700)); }
+.bd-y800 { --bdcolor: hsl(var(--yellow800)); }
+.bd-y900 { --bdcolor: hsl(var(--yellow900)); }
+.bd-v100 { --bdcolor: hsl(var(--violet100)); }
+.bd-v200 { --bdcolor: hsl(var(--violet200)); }
+.bd-v300 { --bdcolor: hsl(var(--violet300)); }
+.bd-v400 { --bdcolor: hsl(var(--violet400)); }
+.bd-v500 { --bdcolor: hsl(var(--violet500)); }
+.bd-v600 { --bdcolor: hsl(var(--violet600)); }
+.bd-v700 { --bdcolor: hsl(var(--violet700)); }
+.bd-v800 { --bdcolor: hsl(var(--violet800)); }
+.bd-v900 { --bdcolor: hsl(var(--violet900)); }
+
+// Special colors
+.bd-ef300 { --bdcolor: hsl(var(--exflow300)); }
+.bd-ln300 { --bdcolor: hsl(var(--lasernet300)); }
+
