--- a/src/assets/scss/utility/_gap.scss
+++ b/src/assets/scss/utility/_gap.scss
@@ -1,3 +1,6 @@
+// Spacing between elements
+
+// All around
 .g-3         { gap: var(--space-3 ); }
 .g-2         { gap: var(--space-2 ); }
 .g-1         { gap: var(--space-1 ); }
@@ -14,7 +17,9 @@
 .g10         { gap: var(--space10 ); }
 .g11         { gap: var(--space11 ); }
 .g12         { gap: var(--space12 ); }
+.g13         { gap: var(--space13 ); }
 
+// Horizontal
 .gx-3 { column-gap: var(--space-3 ); }
 .gx-2 { column-gap: var(--space-2 ); }
 .gx-1 { column-gap: var(--space-1 ); }
@@ -31,6 +36,7 @@
 .gx10 { column-gap: var(--space10 ); }
 .gx11 { column-gap: var(--space11 ); }
 .gx12 { column-gap: var(--space12 ); }
+.gx13 { column-gap: var(--space13 ); }
 
 .gy-3    { row-gap: var(--space-3 ); }
 .gy-2    { row-gap: var(--space-2 ); }
@@ -48,3 +54,4 @@
 .gy10    { row-gap: var(--space10 ); }
 .gy11    { row-gap: var(--space11 ); }
 .gy12    { row-gap: var(--space12 ); }
+.gy13    { row-gap: var(--space13 ); }
