--- a/src/assets/scss/global/_root.scss
+++ b/src/assets/scss/global/_root.scss
@@ -3,7 +3,7 @@
   /* Color palette */
   --primary050: 12, 100%, 96%;
   --primary100: 12, 100%, 96%;
-  --primary200: ;
+  --primary200: 12, 100%, 84%;
   --primary300: 12, 100%, 67%;
   --primary400: ;
   --primary500: 12, 100%, 50%;
