--- a/src/assets/scss/global/_elements.scss
+++ b/src/assets/scss/global/_elements.scss
@@ -89,9 +89,11 @@ i,
 em {}
 
 ul {
-  list-style: none;
+  // padding-left: var(--space0);
 }
 
-li {}
+li {
+  // list-style: outside disc;
+}
 
 ::marker {}
