--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="[ cluster squeeze12 ] [ cx e g2 px1 pt2 pb0 fs-1 ]">
+<footer class="[ cluster squeeze12 ] [ cx g2 px1 pt2 pb0 fs-1 ]">
   {% for language in site.languages %}
   {% if loop.first %}<ul class="[ flow2 ]">{% endif %}
 
